--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1,18 +1,18 @@
 {
   "appName": {
-    "message": "hubcare",
+    "message": "HubCare - Check GitHub repositories' health",
     "description": "The name of the application"
   },
   "appShortName": {
-    "message": "hubcare",
+    "message": "HubCare",
     "description": "The short_name (maximum of 12 characters recommended) is a short version of the app's name."
   },
   "appDescription": {
-    "message": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
+    "message": "A simple and fast way to check a repository's health, so you can save time when choosing in which repository to trust and invest your time as a user or as a contributor.",
     "description": "The description of the application"
   },
   "browserActionTitle": {
-    "message": "hubcare",
+    "message": "HubCare",
     "description": "The title of the browser action button"
   }
 }
