--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -8,7 +8,7 @@
     "description": "The short_name (maximum of 12 characters recommended) is a short version of the app's name."
   },
   "appDescription": {
-    "message": "A simple and fast way to check a repository's health, so you can save time when choosing in which repository to trust and invest your time as a user or as a contributor.",
+    "message": "Fastly check a GitHub repository's health and save your time when choosing what software to use or contribute with.",
     "description": "The description of the application"
   },
   "browserActionTitle": {
